[package]
name = "ws-oled-driver"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "Raspberry Pi Waveshare OLED display hat driver"
authors = ["Sreedev Kodichath <sreedevpadmakumar@gmail.com>"]
repository = "https://github.com/sreedevk/ws-oled-driver"

[dependencies]
anyhow = "1.0.69"
rppal = "0.14.1"
